Send encrypted message that spans over multiple encrypted blocks.

--- a/CronoStart/Simulator/SIM800H/src/ro/pata/sim800h/SIM800H.form
+++ b/CronoStart/Simulator/SIM800H/src/ro/pata/sim800h/SIM800H.form
@@ -31,7 +31,9 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace min="0" pref="435" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="368" max="32767" attributes="0"/>
+                      <Component id="btnTerm" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnTest" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="btmClear" min="-2" max="-2" attributes="0"/>
@@ -57,6 +59,7 @@
                   <Component id="btnSend" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btmClear" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btnTest" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnTerm" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -136,6 +139,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnTestActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnTerm">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="CR LF"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnTermActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
